# mgmt

./: .direnvrc.uv  .envrc  .gitignore  Caddyfile.example  README.md  flake.nix  justfile
backend/: .env.example  .gitignore  justfile  pyproject.toml
backend/app/: __init__.py  __main__.py  main.py
backend/app/core/: config.py
backend/app/core/security/: consts.py  jwt_service.py  kdf_pass.py
backend/app/schemas/: cookies.py
backend/app/tests/: test_jwt.py  test_settings.py
backend/migrations/: env.py
backend/migrations/versions/: 8cb74e1b41ad_add_sample_table.py
frontend/: package-lock.json
